# example-raii-tempdir-cpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: filesystem_utils.cpp  filesystem_utils.h
test/: test_filesystem_utils.cpp
